# prompt-o-matic

./: .cursorrules  .gitignore  AGENT_HANDOFF.md  APPLICATION_REFERENCE.md  About_Prompt_Builder_Tab.md  CLAUDE_HANDOFF.md  Casting_ROOM_LOGIC_2.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  TAKEOVER_PLAN.md  developer_brief_application_reference.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
.beads/: issues.jsonl  metadata.json
.claude/: settings.local.json
Archive_not_needed/: CURSOR_DIRECTORS_EXPANSION.md  actor_bank_claude_code_brief.md  allprompts.md  improvementSuggestions2.md
api/: actor-more-takes.js  actor-more-takes.test.js  analyze-reference-image.js  character-batch-candidate-approve.js  character-batch-candidate-mutate.js  character-batch-candidate-reject.js  character-batch-candidate-save.js  character-batch-candidates.js  character-batch-refill.js  character-batch.js  character-batches.js  character-lifecycle.js  character-portfolio-plan.js  character-portfolio-queue.js  characters-generate-batch.js  characters.js  characters.test.js  comfy-ingest-many.js  comfy-ingest-outputs.js  comfy-job-status.js  comfy-jobs-status.js  comfy-jobs.js  comfy-queue-character.js  comfy-queue-prompt-pack.js  comfy-status.js  comfy-validate-workflow.js  comfy-workflows.js  generated-image-approve.js  generated-image-reject.js  generated-image-view.js  polish-health.js  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: models.json
src-tauri/src/: lib.rs  main.rs  models.rs  sidecar.rs
(+181 files in other folders)
